[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Obstacles/UFO/UFO.gd" type="Script" id=1]
[ext_resource path="res://src/img/ufo.png" type="Texture" id=2]
[ext_resource path="res://src/sound/destroyed.wav" type="AudioStream" id=3]
[ext_resource path="res://src/juice/ExplodeParticles.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 25.4974
height = 60.2677

[sub_resource type="CapsuleShape2D" id=2]
radius = 28.2549
height = 68.2179

[node name="UFO" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 18
script = ExtResource( 1 )

[node name="ExplodeParticles2" parent="." instance=ExtResource( 4 )]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 6.0705, 2.59094 )
__meta__ = {
"_edit_lock_": true
}

[node name="DestroyedAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -4.0

[node name="ExplodeParticles" parent="." instance=ExtResource( 4 )]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
